--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<script>
- </script>
-  <div id="game">
-    <button onclick="playGame('Paper')">Paper</button>
-    <button onclick="playGame('Rock')">Rock</button>
-    <button onclick="playGame('Scissors')">Scissors</button>
-  </div>
-
-&#x1F464;
-&#x1F5A5;
+<div id="board">
+👤<span id="uScore">0</span>:<span id="cScore">0</span>🖥️
+</div>
+<div id="action"><p>get ready for some RPS action!</p></div>
+<div class="routes">
+  <div class="route" id="rock">✊</div>
+  <div class="route" id="rock">✋</div>
+  <div class="route" id="rock">✌️</div>
+</div>
 </body>
 <script src="app.js" charset="utf-8"></script>
 </html>
