Game works with no final round

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="board">
-👤<span id="uScore">0</span>:<span id="cScore">0</span>🖥️
-</div>
-<div id="action"><p>get ready for some RPS action!</p></div>
-<div class="routes">
-  <div class="route" id="rock">✊</div>
-  <div class="route" id="rock">✋</div>
-  <div class="route" id="rock">✌️</div>
-</div>
+  <div id="board">
+    👤 <span id="uScore">0</span>:<span id="cScore">0</span> 🖥️
+  </div>
+  <div id="action"><p>get ready for some RPS action!</p></div>
+  <div class="routes">
+    <div class="route" id="rock">✊</div>
+    <div class="route" id="paper">✋</div>
+    <div class="route" id="scissors">✌️</div>
+  </div>
 </body>
 <script src="app.js" charset="utf-8"></script>
 </html>
