Message displaying round is working

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="time">
+    Round: <span id="gameRound">1</span>
+  </div>
   <div id="board">
     👤 <span id="uScore">0</span>:<span id="cScore">0</span> 🖥️
   </div>
