Game mechanics fully functional

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <title>Rock Paper Scissors</title>
   <meta charset='utf-8'>
   <link rel="stylesheet" href="style.css">
+  <meta
+     name='viewport'
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
+/>
 </head>
 <body>
   <div id="time">
-    Round: <span id="gameRound">1</span>
+    <span id="roundTime">Round: </span><span id="gameRound">1</span>
   </div>
   <div id="board">
     👤 <span id="uScore">0</span>:<span id="cScore">0</span> 🖥️
